--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/chat/chat.scss
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/chat/chat.scss
@@ -6,7 +6,7 @@
   border-radius: 8px;
   padding: 10px 15px;
   margin-top: 10px;
-  width: 200px;
+  min-width: 200px;
   text-decoration: none;
   cursor: pointer;
   transition: 0.3s ease;
