--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.scss
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.scss
@@ -15,7 +15,7 @@ img{
   color: #fff;
   border-radius: 8px;
   padding: 10px 15px;
-  width: 200px;
+  min-width: 200px;
   cursor: pointer;
   transition: 0.3s ease;
 
