--- a/src/app/Pages/projects/addproject/addproject.scss
+++ b/src/app/Pages/projects/addproject/addproject.scss
@@ -12,7 +12,7 @@
   color: #fff;
   border-radius: 8px;
   padding: 10px 15px;
-  width: 200px;
+  min-width: 200px;
   cursor: pointer;
   transition: 0.3s ease;
 
