--- a/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
+++ b/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
@@ -6,7 +6,7 @@
   border-radius: 8px;
   padding: 10px 15px;
   margin-top: 10px;
-  width: 200px;
+  min-width: 200px;
   text-decoration: none;
   cursor: pointer;
   transition: 0.3s ease;
@@ -81,4 +81,22 @@
   text-align: center;
   color: #aaa;
   font-size: 18px;
+}
+.image-card {
+  display: inline-block;
+  border-radius: 8px;
+  overflow: hidden;
+  max-width: 200px;
+}
+
+.image-preview {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+}
+
+.attach-img{
+  object-fit: cover;
+  border-radius: 5px;
 }
