--- a/src/styles.scss
+++ b/src/styles.scss
@@ -725,7 +725,7 @@ body {
 }
 .chat-container {
     width: 100%;
-    height: 790px;
+    height: 670px;
     background-color: transparent;
     border-radius: 8px;
     display: flex;
@@ -750,7 +750,6 @@ body {
   background-color: #ffffff10;
 }
 .chat-box{
-    max-height: 790px;
     overflow-y: auto;
     padding-right: 20px; 
 }
@@ -788,6 +787,9 @@ body {
     flex-direction:row; /* Place image and message content side by side */
     align-items: flex-start; /* Vertically align the content and image */
     gap: 10px; /* Add spacing between the image and message */
+    width: 100%;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 
 .user-img {
@@ -2005,26 +2007,19 @@ overflow-x: hidden;
 }
 
 .dataShow {
-  width: 1200px;
   overflow-x: scroll;
   scrollbar-width: none;
 }
 @media (max-width: 768px) {
-  .dataShow {
-  width: 400px;
-  }
+
 }
 
 @media (max-width: 508px) {
-  .dataShow {
-  width: 300px;
-  }
+
 }
 
 @media (max-width:400px) {
-  .dataShow {
-  width: 200px;
-  }
+
 }
 /* End add project */
 
