--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/posts/posts.html
@@ -17,7 +17,7 @@
       <div class=" col-8">
         <router-outlet></router-outlet>
       </div>
-      <div class="d-flex ms-5 col rounded-3 " style="background-color: transparent">
+      <div class="d-flex  col rounded-3 " style="background-color: transparent">
 
 
         <!-- month-picker.component.html -->
