--- a/src/app/Pages/projects/projectDetalis/components/addpost/addpost.html
+++ b/src/app/Pages/projects/projectDetalis/components/addpost/addpost.html
@@ -1,4 +1,4 @@
-<div class="d-flex col p-4 rounded-3 mt-5" style="background-color: #2d2d2d">
+<div class="d-flex col p-4 rounded-3 " style="background-color: #2d2d2d">
   <form [formGroup]="form" class="col-7 pe-3">
     <input type="date" formControlName="postingAt" />
 
