--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/show-post/show-post.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/show-post/show-post.html
@@ -1,4 +1,4 @@
-<div class="d-flex col p-4 rounded-3 mt-5" style="background-color: #2d2d2d">
+<div class="d-flex col p-4 rounded-3" style="background-color: #2d2d2d">
   <div class="col-7 pe-3">
     <div class="d-flex align-items-center">
       <h3 class="mb-0">Post {{ posts().number }}</h3>
