--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/chat/chat.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/chat/chat.html
@@ -1,4 +1,4 @@
-<div class="project-detail-page px-3">
+<div class="project-detail-page ">
   <div class="project-chat px-md-0 px-3">
     <h1 class="big text-end text-white mt-5 pt-5 mb-3">PROJECT CHAT</h1>
 
