--- a/src/app/Pages/projects/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/projects/projectDetalis/components/posts/posts.html
@@ -1,7 +1,7 @@
-<div class="third pt-5">
+<div class="third ">
   <div class="text-white p-5 mt-5" style="background-color: #171818; border-radius: 13px">
     <div class="row">
-      <div class="d-flex justify-content-between mb-5">
+      <div class="d-flex justify-content-between mb-3">
         <div class="col-5">
           <div class="blue text-center p-2 rounded-3 pe-2" style="background-color: #0b6b6e; margin-left: -70px">
             <h2 class="pe-4  mb-0">SOCIAL MEDIA </h2>
@@ -14,14 +14,14 @@
           </div>
         </div>
       </div>
-      <div class=" col-8">
+      <div class=" col-8 pe-4 ps-0">
         <router-outlet></router-outlet>
       </div>
-      <div class="d-flex ms-5 col rounded-3 " style="background-color: transparent">
+      <div class="d-flex  col rounded-3 px-0  " style="background-color: transparent">
 
 
         <!-- month-picker.component.html -->
-        <div class="month-picker d-flex w-100 justify-content-between flex-column gap-2">
+        <div class="month-picker d-flex w-100 justify-content-between  flex-column gap-2">
           <div class="header m-0">
             <span (click)="prevPage()">&#8592;</span>
             <span> Page {{ pageNumber }} </span>
@@ -58,9 +58,9 @@
         </div>
       </div>
 
-     <div class="d-flex justify-content-between align-items-center">
-           <p class="mt-5 pt-3">Project Progress</p>
-      <div class="mt-3 d-flex gap-2">
+     <div class="d-flex justify-content-between align-items-start px-0 my-3">
+           <p class=" p-0 m-0">Project Progress</p>
+      <div class="d-flex gap-1 ps-5">
   <button class="btn" (click)="increaseProgress(25)">+25%</button>
   <button class="btn " (click)="increaseProgress(50)">+50%</button>
   <button class="btn " (click)="increaseProgress(75)">+75%</button>
