--- a/src/app/Pages/projects/projectDetalis/components/show-post/show-post.scss
+++ b/src/app/Pages/projects/projectDetalis/components/show-post/show-post.scss
@@ -30,9 +30,9 @@
 
 }
 .decScroll{
-  height: 40px;
+  max-height: 70px;
   padding-inline-end: 10px;
-  overflow-y: scroll;
+  overflow-y: auto;
   
       &::-webkit-scrollbar {
         width: 6px;
