--- a/src/app/Pages/projects/projectDetalis/components/chat/chat.html
+++ b/src/app/Pages/projects/projectDetalis/components/chat/chat.html
@@ -48,14 +48,36 @@
                 @if (message.files?.length) {
                 <div class="dataShow d-flex align-items-center gap-2">
                   @for (file of message.files; track file.name ; let i = $index) {
-                  <a class="file-card d-flex align-items-center gap-2" target="_blank"
-                    [href]="baseurl + file.attachmentUrl" download>
-                    <img class="attach-img" src="assets/img/new-document 2.svg" />
+                   @if(isImage(file.attachmentUrl)){
+                  <a class="file-card d-flex align-items-end justify-content-between gap-2">
+                    <div class="d-flex gap-2">
+                       <img class="attach-img" [src]=" baseurl + file.attachmentUrl" width="35" height="35" />
                     <div class="file-info">
                       <div class="file-name"> File {{i + 1}}</div>
-                      <div class="file-size">{{ file.type }}</div>
+                      <div class="file-size">{{ 4 }} MB</div>
+                    </div>
+                    </div>
+                    <div class="Icon" (click)="downloadFile(file.attachmentUrl)">
+                      <i class="fa-solid fa-download fs-5"></i>
                     </div>
                   </a>
+                  }
+
+                  @else {
+              <a class="file-card d-flex align-items-end justify-content-between gap-2">
+                    <div class="d-flex gap-2">
+                       <img class="attach-img" src="assets/img/new-document 2.svg" />
+                    <div class="file-info">
+                      <div class="file-name"> File {{i + 1}}</div>
+                      <div class="file-size">{{ 4 }} MB</div>
+                    </div>
+                    </div>
+                    <div class="Icon" (click)="downloadFile(file.attachmentUrl)">
+                      <i class="fa-solid fa-download fs-5"></i>
+                    </div>
+                  </a>
+                  }
+                  
                   }
                 </div>
                 }
