--- a/src/app/Pages/projects/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/projects/projectDetalis/components/posts/posts.html
@@ -22,7 +22,7 @@
       <div class="col-8 px-3">
         <router-outlet></router-outlet>
       </div>
-      <div class="d-flex col rounded-3 px-3" style="background-color: transparent">
+      <div class="d-flex col rounded-3 px-3 ps-0" style="background-color: transparent">
         <!-- month-picker.component.html -->
         <div class="month-picker d-flex w-100 justify-content-between flex-column gap-2">
           <div class="header m-0">
