--- a/src/app/Pages/profile/Components/feedback-employees/feedback-employees.html
+++ b/src/app/Pages/profile/Components/feedback-employees/feedback-employees.html
@@ -1,10 +1,6 @@
-<div class="text-white  feed-back px-md-0 px-3">
-    <div class="px-3 " style="background-image: none; ">
-    <div class="d-flex justify-content-end align-items-center my-5 headerText">
-
-                    <h1 class=" text-end px-0 ">FEEDBACKS</h1>
- 
-        </div>
+<div class="text-white feed-back px-md-0 px-3">
+    <div class=" " style="background-image: none;">
+<h1 class="mt-5 text-white px text-end big mb-4"> FEEDBACK</h1>
         <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box mb-5 pe-lg-4">
             <div class="col-1 p-0 mt-0">
                 <p class="mb-0">AVERAGE </p>
@@ -19,11 +15,11 @@
                     </div>
                 </div>
             </div>
-     
+   
             <div class="feed-boxfeed px-0">
                 
-                   @for (feedback of Feedbacks(); track   feedback.id ; let i = $index) {
-                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr" [routerLink]="['/getfeedback',feedback.id]">
+                   @for (feedback of Feedbacks(); track  $index ; let i = $index) {
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr"  [routerLink]="['/getfeedback',feedback.id]">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
@@ -40,7 +36,7 @@
                         <p class="mb-1 small">{{feedback.clientName}}</p>
                         <div class="stars mt-2 justify-content-end">
                             @for (s of [1, 2, 3, 4, 5]; track $index) {
-                            <button class="star-btn" [class.active]="s <= feedback.overAllRate">
+            <button class="star-btn" [class.active]="s <= feedback.overAllRate">
                                 <i class="fa fa-star"></i>
                             </button>
                             }
@@ -56,7 +52,7 @@
                   </div>
                 }
             </div>
-            <h1 class="text-end pe-0 date">{{currentYear}}</h1>
+        <h1 class="text-end pe-0 date">{{ currentYear }}</h1>
         </div>
 
 
