--- a/src/app/Pages/profile/profile.html
+++ b/src/app/Pages/profile/profile.html
@@ -102,29 +102,28 @@
                 </div>
             </div>
             <div class="col-lg-6  p-0 ps-lg-4 mx-lg-0 pt-lg-0 pt-3">
-                <div class="p-md-4 p-3 mx-0 rounded-3 row h-100 right-box ">
-                    <div
-                        class="p-3 pb-md-3 pb-0 pt-3  pt-2 mt-1 mt-md-0 rounded-3 inner-box col-xl-5 col-xxl-4 col-lg-6 col-md-4 col-sm-5 col me-2 me-lg-0">
-                        <div class=" mx-0 d-flex pb-lg-0 ">
-                            <div class="px-0 me-3">
-                                <h1 class="mb-3">14</h1>
-                                <p class="mb-0 " style="white-space: pre-line; line-height: 1.5;">
-                                    Completed
+                 <div class="p-md-4 p-3 mx-0 rounded row h-100 right-box pe-0">
+                    <div class=" inner-box col rounded " style="flex: 0;">
+                        <div class="p-3 d-flex gap-5 align-items-end   ">
+                            <div class="">
+                                <h1 class="numOfEmployee mb-2">14</h1>
+                                <div class="mb-0 mt-2 " >
+                                    <h6 class="fw-bolder fw-bold mt-2 h-auto mb-0">Completed</h6>
                                     projects
-                                </p>
+                                </div>
                             </div>
-                            <div class="p-0 ">
-                                <img style="margin-top: 0px;" src="assets/img/Rectangle 721.svg" alt="">
+                            <div class="p-0">
+                                <img src="assets/img/Rectangle 721.svg" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-6 ms-auto col-6 text-end px-0">
+                    <div class="col-lg-6 col-sm-7 ms-auto col-6 text-end px-0">
                         <div class="mx-0 row">
-                            <h2 class="p-0 mb-0 mt-1">PSR</h2>
-                            <p class="p-0 mb-0 mt-3 lh-1">
+                            <h2 class="p-0 mt-1">PSR</h2>
+                            <p class="p-0  mb-3  " style="white-space: pre-line;">
                                 PROJECT SUCCESS RATE
                             </p>
-                            <span class="p-0 pt-md-0 pt-1">87%</span>
+                            <span class="px-0">87%</span>
                         </div>
                     </div>
                 </div>
@@ -134,3 +133,4 @@
 </div>
 
 <app-projects-profile />
+<app-feedback-employees/>
