--- a/src/app/Pages/Interfaces_Clients/my-profile-client/my-profile-client.html
+++ b/src/app/Pages/Interfaces_Clients/my-profile-client/my-profile-client.html
@@ -1,4 +1,4 @@
-<h1 class="mt-5 text-white text-end big px-3">CLIENT PROFILE</h1>
+<h1 class="mt-5 text-white text-end big">CLIENT PROFILE</h1>
 <div class="text-white client-profile p-md-5 p-3 mb-5">
   <div class="d-flex justify-content-end">
     @switch (aboutclient()?.clientType) { @case (0) {
