--- a/src/styles.scss
+++ b/src/styles.scss
@@ -736,6 +736,10 @@ body {
 .chat-box {
     flex-grow: 1;
 }
+.booked{
+      color: #14d7e7;
+
+}
 .chat-box::-webkit-scrollbar {
   width: 5px;
   height: 25px;
