--- a/src/app/Layout/Clients/mainlayout-clients/mainlayout-clients.html
+++ b/src/app/Layout/Clients/mainlayout-clients/mainlayout-clients.html
@@ -6,9 +6,10 @@
     background-position-x: 50%;
   "
 >
-  <app-sidebar-cliens (toggleSidebar)="onToggleSidebar($event)"></app-sidebar-cliens>
+<app-navbar-clients/>
 
-  <div class="main-content my-5" [class.sidebar-closed]="isSidebarClosed">
-    <router-outlet></router-outlet>
-  </div>
+ <div class="container my-5">
+      <router-outlet></router-outlet>
+
+ </div>
 </div>
