--- a/src/app/Pages/Interfaces_Clients/myprojects/myprojects.scss
+++ b/src/app/Pages/Interfaces_Clients/myprojects/myprojects.scss
@@ -5,7 +5,9 @@
         object-fit: cover;
 
 }
-
+h6{
+  white-space: nowrap;
+}
 .card {
   position: relative;
   overflow: hidden; // عشان ما يخرجش أي جزء برا الكارت
@@ -51,7 +53,6 @@ ease;
 
 }
 
-
 .booked {
   color: #0b6b6e;
   font-weight: 900 ;
@@ -64,4 +65,79 @@ ease;
 }
 .active{
 background: #0B6B6E;
+}
+
+.team-container{
+    height: auto !important;
+}
+.card-img-top{
+        object-fit: cover;
+
+}
+.booked {
+  color: #0b6b6e;
+  font-weight: 900 ;
+}
+.seletType{
+  background: #0B6B6E33;
+ padding: 10px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.active{
+background: #0B6B6E;
+}
+.card {
+  position: relative;
+  overflow: hidden; // عشان ما يخرجش أي جزء برا الكارت
+
+  .cardOptions {
+    position: absolute;
+    top: 30%;
+    right: -100px;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    border-radius: 8px 0 0 8px;
+    display: flex
+;
+    /* align-items: center; */
+    gap: 10px;
+    padding: 10px;
+    transition: all 0.4s 
+ease;
+    opacity: 0;
+
+    display: flex;
+    width: 36%;
+
+    i {
+      cursor: pointer;
+      font-size: 18px;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: var(--bs-info); 
+      }
+    }
+  }
+
+  &:hover .cardOptions {
+    right: 0px;
+    opacity: 1;
+  }
+}
+.card-img-top{
+        object-fit: cover;
+
+}
+.bottomBox h6{
+  font-size: 125px;
+  line-height: 1.3;
+    height: 100px;
+}
+.team .right-box h5 {
+  font-size: 90px !important;
+  color: var(--blue);
+  height: 65px;
 }
