--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/post-selector/post-selector.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/post-selector/post-selector.html
@@ -1,4 +1,4 @@
-<div class="d-flex col p-4 rounded-3" style="background-color: #2d2d2d">
+<div class="d-flex col p-4 rounded-3 mt-5" style="background-color: #2d2d2d">
 
 
     <div class="seleced d-flex w-100 justify-content-center align-items-center flex-column gap-5">
