--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/posts/posts.html
@@ -1,61 +1,127 @@
-<div class="third pt-5">
-  <div class="text-white p-5 mt-5" style="background-color: #171818; border-radius: 13px">
+<div class="third">
+  <div class="text-white p-4 mt-5" style="background-color: #171818; border-radius: 13px">
     <div class="row">
-      <div class="d-flex justify-content-between mb-5">
+      <div class="d-flex justify-content-between mb-3">
         <div class="col-5">
-          <div class="blue text-center p-2 rounded-3 pe-2" style="background-color: #0b6b6e; margin-left: -70px">
-            <h2 class="pe-4  mb-0">SOCIAL MEDIA </h2>
+          <div
+            class="blue text-center p-2 rounded-3 pe-2"
+            style="background-color: #0b6b6e; margin-left: -70px"
+          >
+            <h2 class="pe-4 mb-0">SOCIAL MEDIA</h2>
           </div>
         </div>
-      
+       
       </div>
-      <div class=" col-8">
+      <div class="col-8 px-3">
         <router-outlet></router-outlet>
       </div>
-      <div class="d-flex  col rounded-3 " style="background-color: transparent">
-
-
+      <div class="d-flex col rounded-3 px-3 ps-0" style="background-color: transparent">
         <!-- month-picker.component.html -->
         <div class="month-picker d-flex w-100 justify-content-between flex-column gap-2">
           <div class="header m-0">
-            <span (click)="prevPage()">&#8592;</span>
+            <span (click)="prevPage()"
+              ><svg
+                width="14"
+                height="12"
+                viewBox="0 0 14 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M0.21967 4.99262C-0.0732231 5.28551 -0.0732231 5.76039 0.21967 6.05328L4.99264 10.8262C5.28553 11.1191 5.76041 11.1191 6.0533 10.8262C6.34619 10.5334 6.34619 10.0585 6.0533 9.76559L1.81066 5.52295L6.0533 1.28031C6.34619 0.987415 6.34619 0.512541 6.0533 0.219648C5.76041 -0.0732456 5.28553 -0.0732456 4.99264 0.219648L0.21967 4.99262ZM13.75 5.52295L13.75 4.77295L0.75 4.77295L0.75 5.52295L0.75 6.27295L13.75 6.27295L13.75 5.52295Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
             <span> Page {{ pageNumber }} </span>
-            <span (click)="nextPage()">&#8594;</span>
+            <span (click)="nextPage()"
+              ><svg
+                width="13"
+                height="12"
+                viewBox="0 0 13 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.5303 6.05328C12.8232 5.76039 12.8232 5.28551 12.5303 4.99262L7.75736 0.219648C7.46447 -0.0732455 6.98959 -0.0732455 6.6967 0.219648C6.40381 0.512541 6.40381 0.987415 6.6967 1.28031L10.9393 5.52295L6.6967 9.76559C6.40381 10.0585 6.40381 10.5334 6.6967 10.8262C6.98959 11.1191 7.46447 11.1191 7.75736 10.8262L12.5303 6.05328ZM0 5.52295L4.91753e-08 6.27295L12 6.27295L12 5.52295L12 4.77295L-4.91753e-08 4.77295L0 5.52295Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
           </div>
 
           <div class="grid post-card">
-            <div *ngFor="let post of displayPosts; let i = index" class="cardSelect"
-              style="cursor: pointer; border-radius: 5px;">
-
+            <div
+              *ngFor="let post of displayPosts; let i = index"
+              class="cardSelect"
+              style="cursor: pointer; border-radius: 5px"
+            >
               <ng-container *ngIf="post.file; else emptyDiv">
-                 @if(post.fileType === 0) {
-                       <img [src]="baseurl + post.file" class="w-100 h-100 object-fit-cover rounded-1" [routerLink]="['posts' , post.id]" />
-                 }
-                  @if(post.fileType === 1) {
-                                              <img src="Image/video-frame-svgrepo-com.svg" class="w-100 h-100 " style="object-fit: fill;" [routerLink]="['posts' , post.id]" />
+                @if(post.fileType === 0) {
+                <img
+                  [src]="baseurl + post.file"
+                  class="w-100 h-100 object-fit-cover rounded-1"
+                  [routerLink]="['posts', post.id]"
+                />
+                } @if(post.fileType === 1) {
+                <img
+                  src="Image/video-frame-svgrepo-com.svg"
+                  class="w-100 h-100"
+                  style="object-fit: fill"
+                  [routerLink]="['posts', post.id]"
+                />
 
-                  }
+                }
               </ng-container>
 
               <!-- إذا مفيش ملف -->
               <ng-template #emptyDiv>
                 <div class="w-100 h-100 bg-gray-800 rounded cardEmpty p-5"></div>
               </ng-template>
-
             </div>
           </div>
 
           <div class="footer m-0">
-            <span (click)="prevMonth()">&#8592;</span>
+            <span (click)="prevMonth()"
+              ><svg
+                width="14"
+                height="12"
+                viewBox="0 0 14 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M0.21967 4.99262C-0.0732231 5.28551 -0.0732231 5.76039 0.21967 6.05328L4.99264 10.8262C5.28553 11.1191 5.76041 11.1191 6.0533 10.8262C6.34619 10.5334 6.34619 10.0585 6.0533 9.76559L1.81066 5.52295L6.0533 1.28031C6.34619 0.987415 6.34619 0.512541 6.0533 0.219648C5.76041 -0.0732456 5.28553 -0.0732456 4.99264 0.219648L0.21967 4.99262ZM13.75 5.52295L13.75 4.77295L0.75 4.77295L0.75 5.52295L0.75 6.27295L13.75 6.27295L13.75 5.52295Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
             <span>{{ monthNames[currentMonth()] }}</span>
-            <span (click)="nextMonth()">&#8594;</span>
+            <span (click)="nextMonth()"
+              ><svg
+                width="13"
+                height="12"
+                viewBox="0 0 13 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.5303 6.05328C12.8232 5.76039 12.8232 5.28551 12.5303 4.99262L7.75736 0.219648C7.46447 -0.0732455 6.98959 -0.0732455 6.6967 0.219648C6.40381 0.512541 6.40381 0.987415 6.6967 1.28031L10.9393 5.52295L6.6967 9.76559C6.40381 10.0585 6.40381 10.5334 6.6967 10.8262C6.98959 11.1191 7.46447 11.1191 7.75736 10.8262L12.5303 6.05328ZM0 5.52295L4.91753e-08 6.27295L12 6.27295L12 5.52295L12 4.77295L-4.91753e-08 4.77295L0 5.52295Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
           </div>
         </div>
       </div>
 
-      <p class="mt-5 pt-3">Project Progress</p>
-      <div class="loader rounded-3 p-3" style="background-color: #2d2d2d; color: white">
-        <div class="d-flex w-100 align-items-center">
+      <div class="d-flex justify-content-between align-items-start px-0 my-3 px-3">
+        <p class="p-0 m-0">Project Progress</p>
+       
+      </div>
+    <div class="px-3">
+         <div class="loader rounded py-4 px-3" style="background-color: #2d2d2d; color: white">
+        <div class="d-flex w-100 align-items-start   justify-content-between ">
           <div>
             <h1 id="percentText" class="mb-0" style="font-size: 70px">
               <span id="percentValue" contenteditable="true" aria-label="Edit percentage">60</span>
@@ -63,23 +129,24 @@
             </h1>
           </div>
 
-          <div class="ms-auto text-end">
+          <div class="">
             <p class="mb-0">Collaborators</p>
             <div class="d-flex">
               <img class="me-1 rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
               <img class="me-1 rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
-              <img class="me-1 rounded-3"  height="50" src="assets/img/EDITED 8 1.svg" alt="" />
-              <img class="rounded-3" height="50"  src="assets/img/EDITED 8 1.svg" alt="" />
+              <img class="me-1 rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
+              <img class="rounded-3" height="50" src="assets/img/EDITED 8 1.svg" alt="" />
             </div>
           </div>
         </div>
 
-        <div class="bar-wrapper mt-3 rounded-3" style="height: 12px">
+        <div class="bar-wrapper mt-3 rounded-3 " style="height: 12px">
           <div id="barGlow" class="bar-glow"></div>
 
           <div id="loaderBar" class="bar-fill"></div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
